--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -43,13 +43,14 @@ a {
 }
 
 .thumbnail-item {
-  min-width: 120px;
-  max-width: 120px;
-  border: 1px solid rgba(100%, 100%, 100%, 0.8);
   border: 1px solid rgb(100%, 100%, 100%);
+  border: 1px solid rgba(100%, 100%, 100%, 0.8);
   display: inline-block;
-  width: 120px;
   justify-content: space-between;
+  max-width: 120px;
+  min-width: 120px;
+  width: 120px;
+
 }
 
 .thumbnail-list {
@@ -99,4 +100,26 @@ a {
   color: white;
   text-shadow: rgba(0, 0, 0, 0.9) 1px, 2px, 9px;
   font-size: 40px;
+}
+
+@media all and (min-width: 768px) {
+
+  .main-content {
+    flex-direction: row;
+    overflow: hidden;
+  }
+
+  .thumbnail-list {
+    flex-direction: column;
+    order: 0;
+    margin-left: 20px;
+  }
+
+  .thumbnail-item {
+    max-width: 260px;
+  }
+
+  .thumbnail-item + .thumbnail-item {
+    margin-top: 20px;
+  }
 }
